glx/testdata/invalid/assertion-unknown-claim/archive.glx
# Warning-level: Unknown claim not in property vocabulary
# This should generate a warning but not fail - allows flexibility

persons:
  person-john:
    version: "1.0"
    properties:
      primary_name: "John Smith"

sources:
  source-record:
    version: "1.0"
    title: "Historical Record"

citations:
  citation-record:
    version: "1.0"
    source: source-record

# This assertion uses an unknown claim that's not in person_properties vocabulary
# Should generate a WARNING but still validate (allows emerging properties)
assertions:
  assertion-custom-claim:
    version: "1.0"
    subject: person-john
    claim: custom_property_not_in_vocab  # WARNING: unknown claim
    value: "some value"
    citations:
      - citation-record
    confidence: medium

# Define person_properties vocabulary for this archive
person_properties:
  primary_name:
    label: "Primary Name"
    description: "Person's name"
    value_type: string
  
  born_on:
    label: "Birth Date"
    description: "Date of birth"
    value_type: date

